Edited wiki page through web user interface.

--- a/wiki/ConfiguringDependencyLibrary.wiki
+++ b/wiki/ConfiguringDependencyLibrary.wiki
@@ -39,7 +39,7 @@ DependencyLibrary.addLocator(new GuiceBeanLocator(injector));
 }}}
 
 === Notes ===
-Because Guice uses implicit-bindings to instantiate object without explcit bindings it makes GuiceBeanLocator hard to chain, therefore it is recommended to be installed as the last locator in the chain
+Because Guice uses the concept of implicit-bindings to instantiate types that have not been explicitly bound in modules it makes GuiceBeanLocator hard to chain, therefore it is recommended to be installed at the end of the chain.
 
 == Custom Integration ==
 Coming soon, for now here is the code to `SpringBeanLocator` which should give a good idea:
