--- a/wiki/DesignByContract.wiki
+++ b/wiki/DesignByContract.wiki
@@ -58,7 +58,7 @@ As you can see, we were able to remove some noise from the code.
 ||@GE0||Numeric method or method arguments||Checks whether or not the return value or argument is greater then or equal to zero||
 ||@LT0||Numeric method or method arguments||Checks whether or not the return value or argument is less then zero||
 ||@LE0||Numeric method or method arguments||Checks whether or not the return value or argument is greater then or equal to zero||
-||@OverridesMustInvoke||Method||Checks whether or not overrides of this method invoke super. If they do not an IllegalStateException is thrown. Notice that the limitation is that the entire class hierarchy must be processed by Salve||
+||@InitOnce||Field||Annotated fields can only have their values set to a non-null value once. Useful when a public setter is needed but the value can only be set once.||
 
 === Installation ===
 Salve provides two contract modules `salve-contract` and `salve-contract-inst`. The former contains runtime dependencies like the annotations, and the latter bytecode instrumentors. If you are using maven2 your dependencies will look like this:
