- fixed code based on idea code analysis - conditional instrumentation of files based on scope

--- a/salve-idea/src/main/java/salve/idea/Messages.properties
+++ b/salve-idea/src/main/java/salve/idea/Messages.properties
@@ -1,3 +1,8 @@
 classfile.locate.error=unable to locate class file for class {0}
 file.type.unexpected.error=file has type {0} instead of expected type {1}
 status.instrumenting=Instrumenting class files with Salve
+instrumentation.failed=Could not instrument {0}.
+instrumentation.failed.lineNumber= Error on line: {0}
+instrumentation.done={0} files were instrumented with Salve
+file.wrong.extension=file does not end with {0}
+filepath.unresolvable=unable to get path to java file {0}
