--- a/salve-idea/src/main/java/salve/idea/Messages_de.properties
+++ b/salve-idea/src/main/java/salve/idea/Messages_de.properties
@@ -1,3 +1,8 @@
 classfile.locate.error=Kann Bin\u00e4rdatei zu Java-Klasse {0} nicht laden
 file.type.unexpected.error=Datei hat Typ {0} anstelle von {1}
 status.instrumenting=Salve-Bytecode erzeugen
+instrumentation.failed=Salve-Instrumentierung von Klasse {0} fehlgeschlagen.
+instrumentation.failed.lineNumber=Fehler in Zeile: {0}
+instrumentation.done={0} Klassen wurden mit Salve-Bytecode angereichert
+file.wrong.extension=Datei endet nicht mit {0}
+filepath.unresolvable=Pfad zu Java-Datei {0} kann nicht ermittelt werden
