Edited wiki page through web user interface.

--- a/wiki/ConfiguringInstrumentation.wiki
+++ b/wiki/ConfiguringInstrumentation.wiki
@@ -89,8 +89,8 @@ Salve has an eclipse builder plugin which can incrementally instrument files as 
 Eclipse update site: http://salve.googlecode.com/svn/trunk/salve-eclipse-update-site/
 
 == IDEA ==
-There's an plugin for IDEA as well now!
+There's an plugin for IDEA, too...
 
 It will scan for salve.xml in the META-INF directory of each IDEA module and instrument your class files. The plugin can be found under the name 'Salve Integration' in IDEA's 'Available' Tab in the 'Plugins' settings dialog easily.
 
-Link to the plugin on IntelliJ.net: http://plugins.intellij.net/plugin/?id=1347
+Link to the plugin on IntelliJ.net: http://plugins.intellij.net/plugin/?id=3709
