--- a/trunk/salve-idea/src/main/java/salve/idea/Messages_de.properties
+++ b/trunk/salve-idea/src/main/java/salve/idea/Messages_de.properties
@@ -3,6 +3,6 @@ file.type.unexpected.error=Datei hat Typ {0} anstelle von {1}
 status.instrumenting=Salve-Bytecode erzeugen
 instrumentation.failed=Salve-Instrumentierung von Klasse {0} fehlgeschlagen.
 instrumentation.failed.lineNumber=Fehler in Zeile: {0}
-instrumentation.done={0} Klassen wurden mit Salve-Bytecode angereichert
+instrumentation.done={0} Klassen wurden verarbeitet, {1} Klassen wurden durch Salve modifiziert
 file.wrong.extension=Datei endet nicht mit {0}
 filepath.unresolvable=Pfad zu Java-Datei {0} kann nicht ermittelt werden
