--- a/wiki/SpringTransactionManager.wiki
+++ b/wiki/SpringTransactionManager.wiki
@@ -31,7 +31,7 @@ Salve provides bytecode instrumentiation of methods with the @Transactional attr
     <property name="transactionInterceptor" ref="txInterceptor"/>
   </bean>
 
-<!-- define 'dataSource' and 'transactionManager' here -->
+<!-- define your required 'transactionManager' here -->
 
 </beans>
 }}}
