--- a/wiki/AnnotatedTransactionManager.wiki
+++ b/wiki/AnnotatedTransactionManager.wiki
@@ -1,5 +1,7 @@
 #summary Using the @Transactional attribute for declarative transactions
 
+(sorry, this is part of 0.10 and not publically available at this time so stay tuned)
+
 = Introduction =
 
 Use salve for @Transactional support instead of spring
