bail out if one module contains more than one META-INF/salve.xml
(1) it looks really stupid and confusing in the package view to have the same file several times under the same package
(2) handling of main and test source would make such situation even worse
(3) one salve.xml should really be enough

So the mapping is:

one project -> has many -> modules -> has zero or one -> META-INF/salve.xml

the salve.xml will only be taken for the scope of the module it is declared in and not affect other modules

--- a/salve-idea/src/main/java/salve/idea/Messages_de.properties
+++ b/salve-idea/src/main/java/salve/idea/Messages_de.properties
@@ -6,3 +6,4 @@ instrumentation.failed.lineNumber=Fehler in Zeile: {0}
 instrumentation.done={0} Klassen wurden durch Salve verarbeitet
 file.wrong.extension=Datei endet nicht mit {0}
 filepath.unresolvable=Pfad zu Java-Datei {0} kann nicht ermittelt werden
+module.multiple.configs=Modul {0} darf nur eine einzelne Salve-Konfigurationsdatei {1} in den Quellordnern enthalten
