--- a/salve-idea/src/main/java/salve/idea/Messages.properties
+++ b/salve-idea/src/main/java/salve/idea/Messages.properties
@@ -6,3 +6,4 @@ instrumentation.failed.lineNumber= Error on line: {0}
 instrumentation.done={0} files were processed by Salve
 file.wrong.extension=file does not end with {0}
 filepath.unresolvable=unable to get path to java file {0}
+module.multiple.configs=Module {0} contains multiple instances of file {1} in its source folders
