--- a/trunk/salve-idea/src/main/java/salve/idea/Messages_de.properties
+++ b/trunk/salve-idea/src/main/java/salve/idea/Messages_de.properties
@@ -6,3 +6,4 @@ instrumentation.failed.lineNumber=Fehler in Zeile: {0}
 instrumentation.done={0} Klassen wurden durch Salve verarbeitet
 file.wrong.extension=Datei endet nicht mit {0}
 filepath.unresolvable=Pfad zu Java-Datei {0} kann nicht ermittelt werden
+module.multiple.configs=Modul {0} darf nur eine einzelne Salve-Konfigurationsdatei {1} in den Quellordnern enthalten
