salve-idea: under some circumstances it happens that expected .class files are missing in the output directory (e.g. when idea and maven run concurrently). in this case a rebuild of the project is enforced to resolve that issue. unfortunately there seems to be no way to enforce recompilation of a single java class but only of the project.

--- a/salve-idea/src/main/java/salve/idea/Messages.properties
+++ b/salve-idea/src/main/java/salve/idea/Messages.properties
@@ -7,3 +7,4 @@ instrumentation.done={0} files were processed by Salve
 file.wrong.extension=file does not end with {0}
 filepath.unresolvable=unable to get path to java file {0}
 module.multiple.configs=Module {0} contains multiple instances of file {1} in its source folders
+classfile.missing.rebuild.requested=unable to locate class file for class {0} - forcing rebuild
