--- a/trunk/salve-idea/src/main/java/salve/idea/Messages.properties
+++ b/trunk/salve-idea/src/main/java/salve/idea/Messages.properties
@@ -7,3 +7,4 @@ instrumentation.done={0} files were processed by Salve
 file.wrong.extension=file does not end with {0}
 filepath.unresolvable=unable to get path to java file {0}
 module.multiple.configs=Module {0} contains multiple instances of file {1} in its source folders
+classfile.missing.rebuild.requested=unable to locate class file for class {0} - forcing rebuild
