--- a/trunk/salve-idea/src/main/java/salve/idea/Messages_de.properties
+++ b/trunk/salve-idea/src/main/java/salve/idea/Messages_de.properties
@@ -1,4 +1,4 @@
-classfile.locate.error=Kann Bin\u00e4rdatei zu Java-Klasse {0} nicht laden
+classfile.locate.error=Kann .class-File zu Klasse {0} nicht laden
 file.type.unexpected.error=Datei hat Typ {0} anstelle von {1}
 status.instrumenting=Salve-Bytecode erzeugen
 instrumentation.failed=Salve-Instrumentierung von Klasse {0} fehlgeschlagen.
@@ -7,3 +7,4 @@ instrumentation.done={0} Klassen wurden durch Salve verarbeitet
 file.wrong.extension=Datei endet nicht mit {0}
 filepath.unresolvable=Pfad zu Java-Datei {0} kann nicht ermittelt werden
 module.multiple.configs=Modul {0} darf nur eine einzelne Salve-Konfigurationsdatei {1} in den Quellordnern enthalten
+classfile.missing.rebuild.requested=Kann .class-File zu Klasse {0} nicht laden - Projekt wird neu kompiliert
