Edited wiki page through web user interface.

--- a/wiki/NavigationPane.wiki
+++ b/wiki/NavigationPane.wiki
@@ -1,5 +1,7 @@
+===Background===
 WhySalve
+ComparisonWithSpringsConfigurable  	 
 
-Configuration
-  * ConfiguringDependencyLibrary 
-  * ConfiguringInstrumentation 
+===Configuration===
+ConfiguringDependencyLibrary 
+ConfiguringInstrumentation 
