Edited wiki page through web user interface.

--- a/wiki/NavigationPane.wiki
+++ b/wiki/NavigationPane.wiki
@@ -1,7 +1,6 @@
-===Background===
-WhySalve
-ComparisonWithSpringsConfigurable  	 
-
-===Configuration===
-ConfiguringDependencyLibrary 
-ConfiguringInstrumentation 
+  * Background
+    * [WhySalve Why Salve exists]
+    * [ComparisonWithSpringsConfigurable]
+  * Configuration
+    * [ConfiguringDependencyLibrary Configuring DependencyLibrary]
+    * [ConfiguringInstrumentation Configuring Instrumentation]
