--- a/wiki/NavigationPane.wiki
+++ b/wiki/NavigationPane.wiki
@@ -1,6 +1,6 @@
   * Background
     * [WhySalve Why Salve exists]
-    * [ComparisonWithSpringsConfigurable]
+    * [ComparisonWithSpringsConfigurable Comparison to Spring's @Configurable]
   * Configuration
     * [ConfiguringDependencyLibrary Configuring DependencyLibrary]
     * [ConfiguringInstrumentation Configuring Instrumentation]
