Edited wiki page through web user interface.

--- a/wiki/NavigationPane.wiki
+++ b/wiki/NavigationPane.wiki
@@ -4,3 +4,6 @@
   * Configuration
     * [ConfiguringDependencyLibrary Dependency lookups]
     * [ConfiguringInstrumentation Instrumentation]
+  * Integrations
+    * [ConfiguringInstrumentation Spring's @Transactional]
+    * [AnnotatedTransactionManager @Transactional without Spring]
