--- a/wiki/SpringTransactionManager.wiki
+++ b/wiki/SpringTransactionManager.wiki
@@ -1,10 +1,28 @@
 = Introduction =
 
-One of the best features of Spring introduced in 2.0 is the @Transactional annotation which allows an easy declarative control of annotations. Unfortunately it only works on beans managed by Spring inside its context. Salve's transactional instrumentor allows this great feature to be used on any pojo instrumented by Salve independent on whether or not it is declared in the Spring's context.
+One of the best features of Spring introduced in 2.0 is the @Transactional annotation which allows an easy declarative control of transactions. Unfortunately, it only works on beans managed by Spring inside its context. Salve's transactional instrumentor allows this great feature to be used on any pojo instrumented by Salve independent of whether or not it is declared in the Spring's context.
 
 = Setup =
 
-== Short Verson ==
+== Project Setup ==
+
+  * Add salve-depend-spring jar as a runtime dependency
+  * Add salve-depend-spring-inst as a build time or runtime dependency based on instrumentation setup
+  * Enable instrumentation by adding salve.depend.spring.txn.TransactionalInstrumentor to salve.xml
+
+=== salve.xml sample ===
+{{{
+<config>
+  <package name="com.myproject">
+    <instrumentor class="salve.depend.DependencyInstrumentor" />
+    <instrumentor class="salve.depend.spring.txn.TransactionalInstrumentor" />
+  </package>
+</config>
+}}}
+
+== Spring Integration ==
+
+=== Short Verson ===
 
 {{{
 <beans>
@@ -19,7 +37,7 @@ One of the best features of Spring introduced in 2.0 is the @Transactional annot
 </beans>
 }}}
 
-== Long Version ==
+=== Long Version ===
 (without using tx:annotation-driven tag)
 
 {{{
