--- a/wiki/NavigationPane.wiki
+++ b/wiki/NavigationPane.wiki
@@ -4,6 +4,11 @@
   * Configuration
     * [ConfiguringDependencyLibrary Dependency lookups]
     * [ConfiguringInstrumentation Instrumentation]
-  * Integrations
-    * [SpringTransactionManager Spring's @Transactional]
-    * [AnnotatedTransactionManager @Transactional without Spring]
+  * Extensions
+    * Transactions
+      * [SpringTransactionManager Spring's @Transactional]
+      * [AnnotatedTransactionManager @Transactional without Spring]
+    * [DesignByContract Contract Module]
+  * Misc
+    * [BuildingSalve Salve From Source]
+    * [Using_Salve_with_Java_14 Salve with Java 1.4]
