--- a/wiki/SpringTransactionManager.wiki
+++ b/wiki/SpringTransactionManager.wiki
@@ -10,15 +10,7 @@ One of the best features of Spring introduced in 2.0 is the @Transactional annot
   * Add salve-depend-spring-inst as a build time or runtime dependency based on instrumentation setup
   * Enable instrumentation by adding salve.depend.spring.txn.TransactionalInstrumentor to salve.xml
 
-=== salve.xml sample ===
-{{{
-<config>
-  <package name="com.myproject">
-    <instrumentor class="salve.depend.DependencyInstrumentor" />
-    <instrumentor class="salve.depend.spring.txn.TransactionalInstrumentor" />
-  </package>
-</config>
-}}}
+See the bottom of the page for pom.xml and salve.xml samples
 
 == Spring Integration ==
 
@@ -64,4 +56,34 @@ One of the best features of Spring introduced in 2.0 is the @Transactional annot
   <!-- define your required 'transactionManager' here as usual -->
 
 </beans>
+}}}
+
+----
+
+=== pom.xml sample ===
+{{{
+<properties>
+  <salve.version>1.1</salve.version>
+</propertes>
+<dependency>
+  <groupId>salve</groupId>
+  <artifactId>salve-depend=spring</artifactId>
+  <version>${salve.version}</version>
+</dependency>
+<dependency>
+  <groupId>salve</groupId>
+  <artifactId>salve-depend-spring-inst</artifactId>
+  <version>${salve.version}</version>
+  <scope>provided</scope>
+</dependency>
+}}}
+
+=== salve.xml sample ===
+{{{
+<config>
+  <package name="com.myproject">
+    <instrumentor class="salve.depend.DependencyInstrumentor" />
+    <instrumentor class="salve.depend.spring.txn.TransactionalInstrumentor" />
+  </package>
+</config>
 }}}
